[tool.poetry]
name = "balatro-modding-api"
version = "0.1.0"
description = ""
authors = ["Dogeek <simon.bordeyne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
luaparser = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
